# purgatory

./: .gitignore  Cargo.toml  UNIFORMS.html  UNIFORMS.md  UNIFORMS.md.tmp  imgui.ini  tet
assets/shaders/: demo.frag
atory/: .emacs.desktop  Cargo.toml  bbbbb.frag  bbbbb2.frag  test.frag
atory/src/: .emacs.desktop  download.rs  editor.rs  lib.rs  main.rs  rebuild.rs  rebuild_test.rs  transpiler.rs
purg/: Cargo.toml
purg/assets/shaders/: demo.frag  demo.frag.base  demo.frag.shadertoy  demo.vert
purg/shaders/: bbbbb3.frag  demo.frag  out.frag  shadertoy.frag
purg/src/: #main.rs#  launch.json  lib.rs  main.rs  purgatory_plugin.rs  shadertoy_pipeline.rs  shadertoy_quad.rs
purg2/: Cargo.toml
purg2/src/: lib.rs  main.rs
shaders/: demo.fs  demo.vs
src/: debug_systems.rs  debug_systems.rs~  download.rs  main.rs  transpiler.rs
