[package]
name = "atory"
description = "Glsl ShaderToy AST parsing backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glsl = "6.0.0"
serde_json = "1.0.59"
reqwest = {version = "0.11", features = ["blocking"]}
# macroquad = {path="../../macroquad"}
# egui-macroquad = "0.5.0"
egui = "0.13.1"
egui-macroquad = "0.5.0"
macroquad = "0.3.6"

[[bin]]
name ="editor"
path = "src/editor.rs"

[lib]
name = "atory"
path = "src/lib.rs"