[package]
name = "purg2"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# macroquad = "0.3"
macroquad = {path="../../macroquad"}
frame_counter = "0.1.2"
imgui = { version = "0.7.0" }
imnodes = {path="../../imnodes-rs"}
chrono = "0.4.*"

[lib]
name = "purgtwo"
path = "src/lib.rs"